k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green-demo
  labels:
    name: blue-green-demo
